[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tracebit"
version = "0.1.0"
description = "CLI for managing Tracebit canary credentials on headless servers"
requires-python = ">=3.8"
dependencies = ["requests>=2.20"]

[project.scripts]
tracebit = "tracebit.cli:main"
